updated meta data

--- a/index.html
+++ b/index.html
@@ -5,6 +5,28 @@
     <link rel="icon" type="image/svg+xml" href="./favicon.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pepega</title>
+
+    <meta name="description" content="Pepega is a safe place for all frogs">
+
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://pepegascoin.com/">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="PEPEGA">
+    <meta property="og:description" content="Pepega is a safe place for all frogs.">
+    <meta property="og:image" content="https://pepegascoin.com/og_pepega.jpg">
+    
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta property="twitter:domain" content="gurmy.org">
+    <meta property="twitter:url" content="https://pepegascoin.com/">
+    <meta name="twitter:title" content="PEPEGA">
+    <meta name="twitter:description" content="Pepega is a safe place for all frogs.">
+    <meta name="twitter:image" content="https://pepegascoin.com/og_pepega.jpg">
+    
+
+
+
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
   </head>
