--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="PEPEGA">
     <meta property="og:description" content="Pepega is a safe place for all frogs.">
-    <meta property="og:image" content="https://pepegascoin.com/og_pepega.jpg">
+    <meta property="og:image" content="https://pepegascoin.com/og_pepega2.png">
     
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
@@ -21,7 +21,7 @@
     <meta property="twitter:url" content="https://pepegascoin.com/">
     <meta name="twitter:title" content="PEPEGA">
     <meta name="twitter:description" content="Pepega is a safe place for all frogs.">
-    <meta name="twitter:image" content="https://pepegascoin.com/og_pepega.jpg">
+    <meta name="twitter:image" content="https://pepegascoin.com/og_pepega2.png">
     
 
 
